# neuro-caseboard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GUI_COUNCIL_LOG.md  GUI_COUNCIL_SCORECARD.md  LOOP_LOG.md  NEURO_CASEBOARD_EVALUATION.md  README.md  caseprep.db  caseprep.db-journal  dev.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd.yml  ci.yml  live-judge.yml  optional-integration.yml  web.yml
.hermes/plans/: 2026-05-19-template-population.md  2026-05-19_133000-radiology-hardening-web-layer.md  2026-05-20_011331-fix-pipeline-output.md  2026-05-21_103234-thrombectomy-evidence-pack-plan.md  2026-05-22-nsgy-db-query-enrichment-phases-2-4-subagent-plan.md  2026-05-22-nsgy-db-query-enrichment.md
.streamlit/: config.toml
_tbimport/: .dockerignore  .gcloudignore  Dockerfile
_tbimport/app/: streamlit_app.py
_tbimport/docs/: how-it-works.md
_tbimport/engine/: caption_index.py  index.py  query.py
_tbimport/eval/: figure_eval.py  run_eval.py
_tbimport/scripts/: recaption_figures.py  serve.sh  setup-wsl-bridge.ps1
_tbimport/server/: main.py  schemas.py
_tbimport/tests/: test_config.py  test_embed.py  test_figure_crop.py  test_query.py  test_server.py  test_synth_clients.py  test_visual_embed.py
api/: __init__.py  serve_phone.py  server.py
app/: ask_confidence.py  ask_errors.py  ask_literature.py  ask_session.py  figure_gallery.py  progress.py  quant_support.py  signal_theme.py  streamlit_app.py
archive/webapp/: app.js  index.html  manifest.webmanifest
caseprep/: case_parser.py  cli.py  figure_rank.py  figure_tags.py  generator.py  knowledge_graph.py  llm.py  mcp_server.py  persistence.py  procedure_taxonomy.py  profile_classifier.py  prognostic_signs.py  query_enrichment.py  retrieval_planning.py  schema.py  scoring.py  web.py
caseprep/adapters/: caseplan.py
caseprep/audit/: card_auditor.py
caseprep/caseprep/: facts.py  (+3 more)
ci/: install.sh  local-ci.sh
cli/: ask.py
docs/: HANDOFF-upstream-figures.md  NEURO_CASEBOARD_ARCHITECTURE.md  NEURO_CASEBOARD_DIAGRAMS.md  SERVE_ON_PHONE.md  cd.md  ci.md  observability-fallback.md
engine/: chunk.py  config.py  embed.py  figures.py  index.py  ingest.py  query.py  rerank.py  synth_clients.py  synthesize.py  visual_index.py
eval/: BASELINE.json  CASE_DOSSIER_REPORT_2026-06-16.md  CASE_IMAGE_JUDGE_REPORT_2026-06-16_after.md  CASE_IMAGE_JUDGE_REPORT_2026-06-16_after2.md  CASE_IMAGE_JUDGE_REPORT_2026-06-16_before.md  CASE_IMAGE_JUDGE_REPORT_2026-06-17_loop2-eval.md  CASE_INTAKE_REPORT_2026-06-16.md  CASE_TEXT_JUDGE_REPORT_2026-06-16_after.md  CASE_TEXT_JUDGE_REPORT_2026-06-16_after2.md  CASE_TEXT_JUDGE_REPORT_2026-06-16_before.md  CASE_TEXT_JUDGE_REPORT_2026-06-17_loop2-eval.md  FIGURE_REPORT.md  FIGURE_REPORT_baseline.md  FIGURE_REPORT_crop_lexical.md  FIGURE_REPORT_crop_lexical_v2.md  FIGURE_REPORT_crop_lexical_v3.md  FIGURE_REPORT_crop_lexical_v4.md  FIGURE_REPORT_final.md  FIGURE_REPORT_shipped.md  FIGURE_SPEC_REPORT_2026-06-16.md  JUDGMENT.md  LIVE_BASELINE.json  QUALITY_GATE_REPORT_2026-06-16.md  ambiguous_variants.yaml  case_dictations.json  case_eval.py  cases.json  coverage.py  figure_answers.yaml  figure_cases.json  figure_eval.py  figure_spec_cases.json  figure_spec_eval.py  gen_fig_boards.py  intake_eval.py  known_answers.yaml  live_image_judge.py  live_text_judge.py  quality_gate.py  run_eval.py
evaluation/: BAKEOFF-SWEEP-RUNBOOK.md  README.md  RESULTS.md  experiment-ledger.md  failure-ledger.jsonl  groundedness-gold-set.jsonl  repository-audit.md
gui-council/: capture-results.cjs  capture.cjs  verify.cjs
neuro_caseboard/: __init__.py  answer_verify.py  board_view.py  briefing_figures.py  briefing_model.py  briefing_pdf.py  briefing_synth.py  captions.py  case_author.py  case_context.py  case_literature.py  case_sections.py  caseboard_pdf.py  cli.py  compile.py  dedup.py  entailment.py  evidence_grade.py  exec_navy.py  explore_llm.py  feedback.py  fpdf_base.py  guard.py  intake.py  model.py  ontology.py  operative_briefing_pdf.py  pipeline.py  preferences.py  qa.py  qa_stream.py  render_md.py  render_pdf.py  retrieve.py  textops.py  topic_extract.py  woven_synth.py
neuro_core/: asset_paths.py  cards_index.py  cards_precision.py  cards_query.py  chunk.py  config.py  corpus_audit.py  evidence.py  figure_guards.py  figure_retriever.py  figures.py  gpu_guard.py  high_yield_topics.py  index.py  ingest.py  live_reconcile.py  query.py  query_analyze.py  rerank.py  synth_clients.py  synthesize.py  visual_embed.py  visual_index.py
packaging/: .env.example  Install Caseboard.command  QUICKSTART.txt  README-TRANSFER.md  make-bundle.sh  setup-mac.sh
references/: eval-loop.md  procedure-first-caseprep-v1.md
scripts/: build_index.py  build_visual_index.py  cd-pull-deploy.sh  gen_briefing_types.py  serve-phone.sh  serve.sh  tunnel.sh  wsl-portproxy.ps1
server/: auth.py  main.py  schemas.py
tests/: conftest.py  fixtures.py  test_answer_verify.py  test_api_ask_stream.py  test_api_ask_verification.py  test_api_briefing.py  test_app_figures.py  test_ask_claim_confidence.py  test_ask_error_handling.py  test_ask_submission_isolation.py  test_asset_paths.py  test_auth.py  test_bleed_guard.py  test_board_view.py  test_briefing_figures.py  test_briefing_html.py  test_briefing_html_integration.py  test_briefing_literature.py  test_briefing_model.py  test_briefing_pdf.py  test_briefing_pipeline.py  test_briefing_subspecialty.py  test_briefing_synth.py  test_briefing_types_gen.py  test_build_evidence_grading.py  test_build_quant_summary.py  test_build_source_attribution.py  test_captions.py  test_cards_input_state.py  test_cards_precision.py  test_cards_study_engine.py  test_case_author.py  test_case_context.py  test_case_corpus_grounding.py  test_case_facets.py  test_case_figures.py  test_case_literature.py  test_case_parser.py  test_case_schema.py  test_case_sections.py  (+88 more)
web/: README.md  app.js  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
webapp/: app.js  index.html  styles.css  sw.js
(+423 files in other folders)
