[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-caseboard"
version = "0.1.0"
description = "Unified neurosurgical case-prep dossier: CasePrep's audited pipeline + textbook-rag's citation-grounded figures, with a corrected report/export surface."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Michael" }]
dependencies = [
    "fpdf2>=2.8",
    "pillow>=10.0",
    "pymupdf>=1.23",
]

# neuro_core (the retrieval/figure engine, formerly the textbook-rag repo) now lives in this
# repo as a first-class package and is imported directly — no sys.path hack. caseprep remains an
# external editable install:  pip install -e ../caseprep
# (The qa/ package holds the Q&A surfaces; large index/ and assets/ dirs stay on disk, located
# via neuro_core.config / TEXTBOOK_INDEX_DIR.)

[project.optional-dependencies]
dev = ["pytest>=7", "pdfplumber>=0.11"]
# LLM-backed Explorer (case-specific question generation for any procedure).
# Needs ANTHROPIC_API_KEY at runtime; falls back to the deterministic Explorer without it.
llm = ["anthropic>=0.40"]
# Signal-styled briefing PDF export (neuro_caseboard.briefing_pdf). After install also run:
#   playwright install chromium
briefing = ["playwright>=1.40"]

[project.scripts]
caseboard = "neuro_caseboard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuro_caseboard*", "neuro_core*"]

[tool.setuptools.package-data]
neuro_caseboard = ["assets/fonts/*.ttf"]

[tool.pytest.ini_options]
markers = [
    "integration: builds a real LanceDB index or loads models (deselect with -m 'not integration')",
]
