[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-caseboard"
version = "0.1.0"
description = "Unified neurosurgical case-prep dossier: CasePrep's audited pipeline + textbook-rag's citation-grounded figures, with a corrected report/export surface."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Michael" }]
dependencies = [
    "fpdf2>=2.8",
    "pillow>=10.0",
    "pymupdf>=1.23",
    # PubMed contemporary-literature lane HTTP client (E-utilities).
    "httpx>=0.27",
    # Required for the advertised `caseboard` entry point to import: cli -> pipeline ->
    # retrieve -> neuro_core.index imports lancedb at module top, and neuro_core.embed /
    # visual_embed import numpy at module top. Both are CPU-only PyPI wheels (no GPU).
    "lancedb>=0.5",
    "numpy>=1.24",
    # --- caseprep's runtime deps (caseprep is now vendored in-tree at ./vendor/caseprep; see
    # the note below). PyMuPDF / httpx / fpdf2 are already required above; these add what the
    # caseprep parser, MCP server, web surface, scoring and contracts need so its full test
    # suite runs from this one install.
    "mcp>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "requests>=2.34.2",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "markdown>=3.10.2",
]

# neuro_core (the retrieval/figure engine, formerly the textbook-rag repo) now lives in this
# repo as a first-class package and is imported directly — no sys.path hack.
#
# caseprep is ALSO vendored in-tree now: its full repo lives at ./vendor/caseprep (brought in
# with `git subtree`, history preserved), and the importable package is ./vendor/caseprep/caseprep
# — mapped to the top-level `caseprep` import name via [tool.setuptools.package-dir] below, so
# every `from caseprep ...` import resolves with no external folder and no editable sibling
# install. It lives under vendor/ (not ./caseprep) so the directory name can't shadow the
# `caseprep` import when the repo root is on sys.path. Runs from a clean clone; no external pin.
#
# (Large index/ and assets/ dirs stay on disk, located via neuro_core.config /
# TEXTBOOK_INDEX_DIR; they are never required for the offline default path or for CI.)

[project.optional-dependencies]
# pytest-asyncio: caseprep's test suite marks ~110 cases with @pytest.mark.asyncio
# (explicit/strict mode), so the plugin must be present for them to actually run.
dev = ["pytest>=7", "pytest-asyncio>=0.23", "pdfplumber>=0.11"]
# caseprep's optional semantic retriever (corpus_topology). The retriever module itself is
# discovered at runtime via $CORPUS_CLUSTERING_PATH; these are only its heavy backends.
semantic = ["sentence-transformers>=2.2", "psycopg[binary]>=3.1", "pgvector>=0.2"]
# LLM-backed Explorer (case-specific question generation for any procedure).
# Needs ANTHROPIC_API_KEY at runtime; falls back to the deterministic Explorer without it.
llm = ["anthropic>=0.40"]
# Vertex AI provider for the Explorer (GCP free credits, quality-first). Needs
# GOOGLE_CLOUD_PROJECT + ADC at runtime; falls back to the deterministic Explorer without it.
vertex = ["google-genai>=1.0"]
# Signal-styled briefing PDF export (neuro_caseboard.briefing_pdf). After install also run:
#   playwright install chromium
briefing = ["playwright>=1.40"]
# Local web app (app/streamlit_app.py).
web = ["streamlit>=1.30"]
# Real (non-injected) embedding / rerank / visual backends. Heavy; CPU works but is slow.
# Only needed to exercise the live retrieval engine — the test suite injects fakes instead.
models = ["sentence-transformers>=2.2", "open-clip-torch>=2.20"]

[project.scripts]
caseboard = "neuro_caseboard.cli:main"
# Vendored caseprep's own entry points, kept working now that it lives in-tree.
caseprep = "caseprep.cli:main"
caseprep-mcp = "caseprep.mcp_server:run"

# The vendored caseprep package sits at ./vendor/caseprep/caseprep; package-dir maps the
# `caseprep` import name to that directory so it stays top-level importable with no import
# rewrites. setuptools' packages.find with two `where` roots mis-resolves this nested layout
# (it doubles the path), so the package list is explicit.
# After a `git subtree pull` of caseprep, refresh the caseprep entries with:
#   python -c "from setuptools import find_packages as f; print('\n'.join(sorted(f('vendor/caseprep', include=['caseprep*']))))"
[tool.setuptools]
packages = [
    "neuro_caseboard",
    "neuro_caseboard.figures_gen",
    "neuro_caseboard.literature",
    "neuro_core",
    "neuro_core.scripts",
    "caseprep",
    "caseprep.adapters",
    "caseprep.audit",
    "caseprep.compile",
    "caseprep.confidence",
    "caseprep.core",
    "caseprep.enrichment",
    "caseprep.evaluation",
    "caseprep.evidence_packs",
    "caseprep.explorer",
    "caseprep.export",
    "caseprep.image_bank",
    "caseprep.integrations",
    "caseprep.intent",
    "caseprep.renderers",
    "caseprep.retrievers",
    "caseprep.synthesis",
]

[tool.setuptools.package-dir]
"caseprep" = "vendor/caseprep/caseprep"

[tool.setuptools.package-data]
neuro_caseboard = ["assets/fonts/*.ttf"]
# caseprep ships its web UI template as package data.
caseprep = ["static/*.html"]

[tool.pytest.ini_options]
# Both this repo's tests and the vendored caseprep tests run as one suite. caseprep's tests
# collect as top-level modules (its tests/__init__.py is dropped on vendoring) so they don't
# collide with this repo's `tests` package (e.g. both have a test_cli.py).
testpaths = ["tests", "vendor/caseprep/tests"]
# Ensure local package source takes precedence over any editable install when running
# tests from a git worktree.
pythonpath = ["."]
# -ra: summarize non-pass outcomes. --strict-markers: an unregistered @pytest.mark.* is an
# error, not a silent typo. --strict-config: a malformed config is an error.
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: offline test that builds a real on-disk LanceDB table (no network/GPU); runs in required CI but deselectable with -m 'not integration' for a faster loop",
    "smoke: end-to-end CLI/artifact smoke that shells out to the `caseboard` entry point",
]
# Tests are fully offline and must stay that way; surface warnings so regressions are visible.
filterwarnings = ["default"]
